--- a/compose.yaml
+++ b/compose.yaml
@@ -9,5 +9,7 @@ services:
     build:
       context: .
       dockerfile: src/Dockerfile
+    environment:
+      - API_KEY=your_api_key
     ports:
-      - "3001:3001"
+      - "8000:8000"
