--- a/compose.yaml
+++ b/compose.yaml
@@ -9,7 +9,8 @@ services:
     build:
       context: .
       dockerfile: src/Dockerfile
-    environment:
-      - API_KEY=your_api_key
     ports:
       - "8000:8000"
+    env_file:
+      - path: .env
+        required: true
